--- a/main.css
+++ b/main.css
@@ -1,3 +1,6 @@
-.display-4{
-align-items: center;
+body{
+    background-image: url("https://ae01.alicdn.com/kf/HTB16H6sPFXXXXaDXVXXq6xXFXXXY/Wedding-Photo-White-Light-Yellow-Land-Photography-Sunshine-Baby-Children-Party-Family-Background-For-Studio-Kate.jpg");
+}
+.jumbotron{
+
 }
